--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -103,8 +103,13 @@ stages:
               versionSpec: "$(PythonVersion)"
 
           - task: DownloadPipelineArtifact@2
-            displayName: "Fetch NuGet from artifacts"
+            displayName: "Fetch NuGet DLL"
             inputs:
+              source: specific
+              project: 5123ca47-74f2-4d67-a5d4-c4d90b8d670a
+              pipeline: 21
+              runVersion: latestFromBranch
+              runBranch: refs/heads/main
               artifact: packages
               patterns: "packages/*.nupkg"
 
