--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -102,6 +102,25 @@ stages:
             inputs:
               versionSpec: "$(PythonVersion)"
 
+          - task: UseDotNet@2
+            displayName: "use .NET SDK 5.0.x"
+            inputs:
+              version: 5.0.x
+
+          - task: DotNetCoreCLI@2
+            displayName: "use GitVersion"
+            inputs:
+              command: custom
+              custom: tool
+              arguments: "install -g gitversion.tool --version 5.6.10"
+
+          - task: DotNetCoreCLI@2
+            displayName: "get version number"
+            inputs:
+              command: custom
+              custom: gitversion
+              arguments: "/output buildserver"
+
           - task: DownloadPipelineArtifact@2
             displayName: "Fetch NuGet DLL"
             inputs:
