--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -66,7 +66,7 @@ jobs:
         inputs:
           SourceFolder: "$(Build.SourcesDirectory)/unpacked/lib/$(DotNetVersion)"
           Contents: "*.dll"
-          TargetFolder: "$(PythonWrapperBaseDirectory)/SkenderStockIndicators/_cslib/lib"
+          TargetFolder: "$(PythonWrapperBaseDirectory)/stock_indicators/_cslib/lib"
           CleanTargetFolder: true
           OverWrite: true
           flattenFolders: true
@@ -150,7 +150,7 @@ jobs:
         inputs:
           SourceFolder: "$(Build.SourcesDirectory)/unpacked/lib/$(DotNetVersion)"
           Contents: "*.dll"
-          TargetFolder: "$(PythonWrapperBaseDirectory)/SkenderStockIndicators/_cslib/lib"
+          TargetFolder: "$(PythonWrapperBaseDirectory)/stock_indicators/_cslib/lib"
           CleanTargetFolder: true
           OverWrite: true
           flattenFolders: true
@@ -163,7 +163,7 @@ jobs:
 
       - script: |
           pip install -r requirements-test.txt
-          pytest -vr A --junitxml=$(PythonWrapperBaseDirectory)/tests/test-results.xml --cov=$(PythonWrapperBaseDirectory)/SkenderStockIndicators --cov-report xml:$(PythonWrapperBaseDirectory)/tests/coverage.xml
+          pytest -vr A --junitxml=$(PythonWrapperBaseDirectory)/tests/test-results.xml --cov=$(PythonWrapperBaseDirectory)/stock_indicators --cov-report xml:$(PythonWrapperBaseDirectory)/tests/coverage.xml
         workingDirectory: $(PythonWrapperBaseDirectory)
         displayName: "Run all tests"
 
