--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -104,18 +104,18 @@ jobs:
 
     strategy:
       matrix:
-        Windows-Python38:
-          imageName: windows-latest
-          python.version: "3.8"
-        Windows-Python39:
-          imageName: windows-latest
-          python.version: "3.9"
-        Linux-Python38:
-          imageName: ubuntu-latest
-          python.version: "3.8"
-        Linux-Python39:
-          imageName: ubuntu-latest
-          python.version: "3.9"
+        # Windows-Python38:
+        #   imageName: windows-latest
+        #   python.version: "3.8"
+        # Windows-Python39:
+        #   imageName: windows-latest
+        #   python.version: "3.9"
+        # Linux-Python38:
+        #   imageName: ubuntu-latest
+        #   python.version: "3.8"
+        # Linux-Python39:
+        #   imageName: ubuntu-latest
+        #   python.version: "3.9"
         MacOS-Python38:
           imageName: macOS-latest
           python.version: "3.8"
