--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -104,18 +104,18 @@ jobs:
 
     strategy:
       matrix:
-        # Windows-Python38:
-        #   imageName: windows-latest
-        #   python.version: "3.8"
-        # Windows-Python39:
-        #   imageName: windows-latest
-        #   python.version: "3.9"
-        # Linux-Python38:
-        #   imageName: ubuntu-latest
-        #   python.version: "3.8"
-        # Linux-Python39:
-        #   imageName: ubuntu-latest
-        #   python.version: "3.9"
+        Windows-Python38:
+          imageName: windows-latest
+          python.version: "3.8"
+        Windows-Python39:
+          imageName: windows-latest
+          python.version: "3.9"
+        Linux-Python38:
+          imageName: ubuntu-latest
+          python.version: "3.8"
+        Linux-Python39:
+          imageName: ubuntu-latest
+          python.version: "3.9"
         MacOS-Python38:
           imageName: macOS-latest
           python.version: "3.8"
@@ -161,13 +161,37 @@ jobs:
           OverWrite: true
           flattenFolders: true
 
-      - script: |
+      - bash: |
+          echo $(Agent.OS)
+          if [ '$(Agent.OS)' = 'Darwin' ]
+          then
+            # Setup Miniconda environment
+            sudo chown -R $USER $CONDA
+            conda create --yes --quiet --name myEnvironment
+
+            # Official documentation is out of date.
+            # This is just workaround to activate conda environment.
+            # See https://github.com/MicrosoftDocs/azure-devops-docs/issues/3812.
+            source $CONDA/bin/activate $CONDA/envs/myEnvironment
+            conda install --yes --quiet --name myEnvironment -c conda-forge pythonnet
+          fi
+
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
         workingDirectory: $(PythonWrapperBaseDirectory)
         displayName: "Install dependencies"
 
-      - script: |
+      - bash: |
+          if [ '$(Agent.OS)' = 'Darwin' ]
+          then
+            # Activate conda environment
+            # Official documentation is out of date.
+            # This is just workaround to activate conda environment.
+            # See https://github.com/MicrosoftDocs/azure-devops-docs/issues/3812.
+            source $CONDA/bin/activate $CONDA/envs/myEnvironment
+            
+          fi
+
           pip install -r requirements-test.txt
           pytest -vr A --junitxml=$(PythonWrapperBaseDirectory)/tests/test-results.xml --cov=$(PythonWrapperBaseDirectory)/stock_indicators --cov-report xml:$(PythonWrapperBaseDirectory)/tests/coverage.xml
         workingDirectory: $(PythonWrapperBaseDirectory)
