--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -46,7 +46,7 @@ jobs:
         displayName: "Fetch NuGet DLL"
         inputs:
           source: specific
-          project: Stock.Indicators
+          project: 5123ca47-74f2-4d67-a5d4-c4d90b8d670a
           pipeline: 21
           runVersion: latestFromBranch
           runBranch: refs/heads/main
