--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -108,21 +108,21 @@ jobs:
         Windows-Python38:
           imageName: windows-latest
           python.version: "3.8"
-        Windows-Python39:
-          imageName: windows-latest
-          python.version: "3.9"
+        # Windows-Python39:
+        #   imageName: windows-latest
+        #   python.version: "3.9"
         Linux-Python38:
           imageName: ubuntu-latest
           python.version: "3.8"
-        Linux-Python39:
-          imageName: ubuntu-latest
-          python.version: "3.9"
+        # Linux-Python39:
+        #   imageName: ubuntu-latest
+        #   python.version: "3.9"
         MacOS-Python38:
           imageName: macOS-latest
           python.version: "3.8"
-        MacOS-Python39:
-          imageName: macOS-latest
-          python.version: "3.9"
+        # MacOS-Python39:
+        #   imageName: macOS-latest
+        #   python.version: "3.9"
 
     pool:
       name: Azure Pipelines
