--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -42,24 +42,6 @@ jobs:
       #     custom: gitversion
       #     arguments: "/output buildserver"
 
-      - task: gitversion/setup@0
-        # condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
-        displayName: Setup GitVersion
-        inputs:
-          versionSpec: '5.x'
-
-      - task: gitversion/execute@0
-        # condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
-        displayName: Calculate GitVersion
-        inputs:
-          useConfigFile: true
-          configFilePath: 'gitversion.yml'
-      
-      - powershell: |
-          echo "Current version: $(GitVersion.SemVer)"
-        displayName: Shows currently compiling version
-        # condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
-
       - task: DownloadPipelineArtifact@2
         displayName: "Fetch NuGet DLL"
         inputs:
@@ -88,6 +70,24 @@ jobs:
           CleanTargetFolder: true
           OverWrite: true
           flattenFolders: true
+      
+      - task: gitversion/setup@0
+        # condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+        displayName: Setup GitVersion
+        inputs:
+          versionSpec: '5.x'
+
+      - task: gitversion/execute@0
+        # condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+        displayName: Calculate GitVersion
+        inputs:
+          useConfigFile: true
+          configFilePath: 'gitversion.yml'
+      
+      - powershell: |
+          echo "Current version: $(GitVersion.SemVer)"
+        displayName: Shows currently compiling version
+        # condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
 
       - script: |
           python -m pip install --upgrade pip setuptools wheel build
@@ -96,8 +96,9 @@ jobs:
       - task: CmdLine@2
         displayName: "Build"
         inputs:
-          script: "python -m build"
+          script: "python setup.py $(GitVersion.SemVer) sdist bdist_wheel"
           workingDirectory: $(PythonWrapperBaseDirectory)
+        #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
 
       - task: CopyFiles@2
         displayName: "Stage artifacts"
