--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -23,7 +23,7 @@ jobs:
           versionSpec: "$(PythonVersion)"
 
       - task: DownloadPipelineArtifact@2
-        displayName: "Fetch v1.x DLL"
+        displayName: "Fetch DLL"
         inputs:
           source: specific
           project: 5123ca47-74f2-4d67-a5d4-c4d90b8d670a
