--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -190,7 +190,7 @@ jobs:
           fi
 
           pip install -r requirements-test.txt
-          pytest -vr A --junitxml=$(Build.SourcesDirectory)/tests/test-results.xml --cov=$(Build.SourcesDirectory)/stock_indicators --cov-report xml:$(Build.SourcesDirectory)/tests/coverage.xml
+          pytest -vr A tests --junitxml=$(Build.SourcesDirectory)/tests/test-results.xml --cov=$(Build.SourcesDirectory)/stock_indicators --cov-report xml:$(Build.SourcesDirectory)/tests/coverage.xml
         workingDirectory: $(Build.SourcesDirectory)
         displayName: "Run all tests"
 
