--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
 
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -42,10 +47,9 @@ jobs:
             --url-swap "https\://daveskender.github.io/Stock.Indicators.Python:http\://127.0.0.1:4000" \
             _site
 
-      # - name: Test accessibility
-      #   working-directory: docs
-      #   run: |
-      #     npm i -g pa11y-ci
-      #     pa11y-ci \
-      #       --sitemap http://127.0.0.1:4000/sitemap.xml \
-      #       --sitemap-exclude "/*.pdf"
+      - name: Test accessibility
+        working-directory: docs
+        run: |
+          npx pa11y-ci \
+            --sitemap http://127.0.0.1:4000/sitemap.xml \
+            --sitemap-exclude "/*.pdf"
