Add sourceurl in _config.yml

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,6 +11,7 @@ github:
   repository_url: "https://github.com/DaveSkender/Stock.Indicators.Python"
   base_repository_url: "https://github.com/DaveSkender/Stock.Indicators"
 
+sourceurl: "https://github.com/DaveSkender/Stock.Indicators.Python/blob/main/stock_indicators/indicators"
 charturl: "https://raw.githubusercontent.com/DaveSkender/Stock.Indicators/main/docs/assets/charts"
 
 plugins:
