--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -61,7 +61,7 @@ jobs:
         displayName: Get GitVersion
         inputs:
           useConfigFile: true
-          configFilePath: 'gitversion.yml'
+          configFilePath: '$(Build.SourcesDirectory)/gitversion.yml'
       
       - powershell: |
           echo "Current version: $(GitVersion.SemVer)"
