--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -101,24 +101,33 @@ jobs:
 
     strategy:
       matrix:
+        Windows-Python37:
+          imageName: windows-latest
+          python.version: "3.7"
         Windows-Python38:
           imageName: windows-latest
           python.version: "3.8"
-        # Windows-Python39:
-        #   imageName: windows-latest
-        #   python.version: "3.9"
+        Windows-Python39:
+          imageName: windows-latest
+          python.version: "3.9"
+        Linux-Python37:
+          imageName: ubuntu-latest
+          python.version: "3.7"
         Linux-Python38:
           imageName: ubuntu-latest
           python.version: "3.8"
-        # Linux-Python39:
-        #   imageName: ubuntu-latest
-        #   python.version: "3.9"
+        Linux-Python39:
+          imageName: ubuntu-latest
+          python.version: "3.9"
+        MacOS-Python37:
+          imageName: macOS-latest
+          python.version: "3.7"
         MacOS-Python38:
           imageName: macOS-latest
           python.version: "3.8"
-        # MacOS-Python39:
-        #   imageName: macOS-latest
-        #   python.version: "3.9"
+        MacOS-Python39:
+          imageName: macOS-latest
+          python.version: "3.9"
 
     pool:
       name: Azure Pipelines
