add concurrent lock to lockbot

--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -3,7 +3,10 @@ name: "Lock Closed Threads"
 
 on:
   schedule:
-    - cron: "0 4 * * *"
+    - cron: "0 7 * * *"
+
+concurrency:
+  group: lock
 
 jobs:
   lock:
