--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -110,6 +110,9 @@ jobs:
         Windows-Python39:
           imageName: windows-latest
           python.version: "3.9"
+        Windows-Python310:
+          imageName: windows-latest
+          python.version: "3.10"
         Linux-Python37:
           imageName: ubuntu-latest
           python.version: "3.7"
@@ -119,6 +122,9 @@ jobs:
         Linux-Python39:
           imageName: ubuntu-latest
           python.version: "3.9"
+        Linux-Python310:
+          imageName: ubuntu-latest
+          python.version: "3.10"
         MacOS-Python37:
           imageName: macOS-latest
           python.version: "3.7"
@@ -128,6 +134,9 @@ jobs:
         MacOS-Python39:
           imageName: macOS-latest
           python.version: "3.9"
+        MacOS-Python310:
+          imageName: macOS-latest
+          python.version: "3.10"
 
     pool:
       name: Azure Pipelines
