--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -159,19 +159,19 @@ jobs:
           flattenFolders: true
 
       - bash: |
-          echo $(Agent.OS)
-          if [ '$(Agent.OS)' = 'Darwin' ]
-          then
-            # Setup Miniconda environment
-            sudo chown -R $USER $CONDA
-            conda create --yes --quiet --name myEnvironment
+          # echo $(Agent.OS)
+          # if [ '$(Agent.OS)' = 'Darwin' ]
+          # then
+          #   # Setup Miniconda environment
+          #   sudo chown -R $USER $CONDA
+          #   conda create --yes --quiet --name myEnvironment
 
-            # Official documentation is out of date.
-            # This is just workaround to activate conda environment.
-            # See https://github.com/MicrosoftDocs/azure-devops-docs/issues/3812.
-            source $CONDA/bin/activate $CONDA/envs/myEnvironment
-            conda install --yes --quiet --name myEnvironment -c conda-forge pythonnet
-          fi
+          #   # Official documentation is out of date.
+          #   # This is just workaround to activate conda environment.
+          #   # See https://github.com/MicrosoftDocs/azure-devops-docs/issues/3812.
+          #   source $CONDA/bin/activate $CONDA/envs/myEnvironment
+          #   conda install --yes --quiet --name myEnvironment -c conda-forge pythonnet
+          # fi
 
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
@@ -179,15 +179,14 @@ jobs:
         displayName: "Install dependencies"
 
       - bash: |
-          if [ '$(Agent.OS)' = 'Darwin' ]
-          then
-            # Activate conda environment
-            # Official documentation is out of date.
-            # This is just workaround to activate conda environment.
-            # See https://github.com/MicrosoftDocs/azure-devops-docs/issues/3812.
-            source $CONDA/bin/activate $CONDA/envs/myEnvironment
-            
-          fi
+          # if [ '$(Agent.OS)' = 'Darwin' ]
+          # then
+          #   # Activate conda environment
+          #   # Official documentation is out of date.
+          #   # This is just workaround to activate conda environment.
+          #   # See https://github.com/MicrosoftDocs/azure-devops-docs/issues/3812.
+          #   source $CONDA/bin/activate $CONDA/envs/myEnvironment
+          # fi
 
           pip install -r requirements-test.txt
           pytest -vr A tests --junitxml=$(Build.SourcesDirectory)/tests/test-results.xml --cov=$(Build.SourcesDirectory)/stock_indicators --cov-report xml:$(Build.SourcesDirectory)/tests/coverage.xml
