--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -64,11 +64,8 @@ jobs:
           configFilePath: 'gitversion.yml'
       
       - powershell: |
-          echo "Current SemVer: $(GitVersion.SemVer)"
-          echo "Current MajorMinorPatch: $(GitVersion.MajorMinorPatch)"
-          sed -i "s/version=.*/version=\'$(GitVersion.MajorMinorPatch)\',/g" setup.py
-          cat setup.py
-        displayName: Update version string in setup.py
+          echo "Current version: $(GitVersion.SemVer)"
+        displayName: Shows GitVersion
 
       - script: |
           python -m pip install --upgrade pip setuptools wheel build
@@ -77,7 +74,7 @@ jobs:
       - task: CmdLine@2
         displayName: "Build"
         inputs:
-          script: "python setup.py sdist bdist_wheel"
+          script: "python setup.py sdist bdist_wheel semver:$(GitVersion.SemVer)"
           workingDirectory: $(Build.SourcesDirectory)
         #condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
