--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -10,7 +10,6 @@ jobs:
   - job: Build
     variables:
       ImageName: "ubuntu-latest"
-      DotNetVersion: "netstandard2.1"
       PythonVersion: "3.8"
 
     pool:
@@ -18,6 +17,12 @@ jobs:
       vmImage: "$(imageName)"
 
     steps:
+      - task: UseDotNet@2
+        displayName: Use .NET 6.0
+        inputs:
+          packageType: 'sdk'
+          version: '6.0.x'
+
       - task: UsePythonVersion@0
         inputs:
           versionSpec: "$(PythonVersion)"
@@ -95,6 +100,12 @@ jobs:
       vmImage: "$(imageName)"
 
     steps:
+      - task: UseDotNet@2
+        displayName: Use .NET 6.0
+        inputs:
+          packageType: 'sdk'
+          version: '6.0.x'
+
       - task: UsePythonVersion@0
         inputs:
           versionSpec: "$(python.version)"
