chore: Bump .NET version of dll to .NET 6.0 (#242)
* Bump .NET version of dll to .NET Standard 6.0

* Add runtimeconfig.json

* Add clr import exception handling

* Update pipelines to use .NET6

* Update build.main.yml

* Update build.main.yml

* Update build.main.yml

* Update __init__

* Clean build script

* Update error msg

Co-authored-by: Dave Skender <8432125+DaveSkender@users.noreply.github.com>

--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -1,5 +1,4 @@
 # MAIN BUILD
-
 trigger:
   - main
 
@@ -10,7 +9,6 @@ jobs:
   - job: Build
     variables:
       ImageName: "ubuntu-latest"
-      DotNetVersion: "netstandard2.1"
       PythonVersion: "3.8"
 
     pool:
@@ -18,6 +16,12 @@ jobs:
       vmImage: "$(imageName)"
 
     steps:
+      - task: UseDotNet@2
+        displayName: Use .NET 6.0
+        inputs:
+          packageType: 'sdk'
+          version: '6.0.x'
+
       - task: UsePythonVersion@0
         inputs:
           versionSpec: "$(PythonVersion)"
@@ -67,25 +71,25 @@ jobs:
 
   - job: Test
     variables:
-      DotNetVersion: "netstandard2.1"
+      PythonVersion: "3.8"
 
     strategy:
       matrix:
         Windows-Python38:
           imageName: windows-latest
-          python.version: "3.8"
+          python.version: "$(PythonVersion)"
         # Windows-Python39:
         #   imageName: windows-latest
         #   python.version: "3.9"
         Linux-Python38:
           imageName: ubuntu-latest
-          python.version: "3.8"
+          python.version: "$(PythonVersion)"
         # Linux-Python39:
         #   imageName: ubuntu-latest
         #   python.version: "3.9"
         MacOS-Python38:
           imageName: macOS-latest
-          python.version: "3.8"
+          python.version: "$(PythonVersion)"
         # MacOS-Python39:
         #   imageName: macOS-latest
         #   python.version: "3.9"
@@ -95,6 +99,12 @@ jobs:
       vmImage: "$(imageName)"
 
     steps:
+      - task: UseDotNet@2
+        displayName: Use .NET 6.0
+        inputs:
+          packageType: 'sdk'
+          version: '6.0.x'
+
       - task: UsePythonVersion@0
         inputs:
           versionSpec: "$(python.version)"
