--- a/gitversion.yml
+++ b/gitversion.yml
@@ -7,6 +7,6 @@ patch-version-bump-message: '\+semver:\s?(fix|patch)'
 no-bump-message: '\+semver:\s?(none|skip)'
 
 branches:
-  v0-8:
-    regex: ^V0.8$
+  master:
+    regex: (^master$|^main$|^V0.8$)
     is-mainline: true
