add base url config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,6 +24,7 @@ dotnet:
   charts: "https://raw.githubusercontent.com/DaveSkender/Stock.Indicators/main/docs/assets/charts"
 
 # this site URL refs
+baseurl: ""
 sourceurl: "https://github.com/DaveSkender/Stock.Indicators.Python/blob/main/stock_indicators/indicators"
 
 ga_tag: G-MNKJE3KS9Y
