update base page directory

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,7 +25,7 @@ dotnet:
 
 # this site URL refs
 baseurl: ""
-repository: DaveSkender/Stock.Indicators.Python.git
+repository: DaveSkender/Stock.Indicators.Python
 sourceurl: "https://github.com/DaveSkender/Stock.Indicators.Python/blob/main/stock_indicators/indicators"
 
 ga_tag: G-MNKJE3KS9Y
@@ -45,19 +45,10 @@ exclude:
     "*.yml",
     "*.pptx",
     ".offline",
+    "docs/README.md",
     "GemFile",
     "node_modules",
     "vendor",
-  ]
-
-include:
-  [
-    "contributing.md",
-    "guide.md",
-    "indicators.html",
-    "performance.md",
-    "utilities.md",
-    "README.md"
   ]
 
 permalink: pretty
