add code coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,4 +43,10 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest -vr A tests
+          pytest -vr A tests --cov
+
+      - name: Post coverage to Codacy
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: .coverage
